[gd_scene load_steps=2 format=2]

[ext_resource path="res://LevelMenu.gd" type="Script" id=1]

[node name="LevelMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 322.0
color = Color( 0.192157, 0.305882, 0.541176, 1 )

[node name="Lv1" type="Button" parent="."]
margin_left = 90.0
margin_top = 108.0
margin_right = 145.0
margin_bottom = 161.0
text = "Lv.1"

[node name="Lv2" type="Button" parent="."]
margin_left = 199.0
margin_top = 108.0
margin_right = 254.0
margin_bottom = 161.0
text = "Lv.2"

[node name="Lv3" type="Button" parent="."]
margin_left = 303.0
margin_top = 108.0
margin_right = 358.0
margin_bottom = 161.0
text = "Lv.3"

[node name="Back" type="Button" parent="."]
margin_left = 196.0
margin_top = 206.0
margin_right = 260.0
margin_bottom = 231.0
text = "Back"

[connection signal="pressed" from="Lv1" to="." method="_on_Lv1_pressed"]
[connection signal="pressed" from="Lv2" to="." method="_on_Lv2_pressed"]
[connection signal="pressed" from="Lv3" to="." method="_on_Lv3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
